test/corpus/comment.test
==========
Line comment
==========
# This is a comment
---
(program
  (comment))

==========
Inline comment following instruction without operands, no space
==========
nop# This is an in-line comment
---
(program
  (instruction
    (opcode))
  (comment))

==========
Inline comment following instruction without operands, space
==========
nop # This is an in-line comment
---
(program
  (instruction
    (opcode))
  (comment))

==========
Inline comment following instruction with operands, no space
==========
jr $t0# This is an in-line comment
---
(program
  (instruction
    (opcode)
    (operands
      (register)))
  (comment))

==========
Inline comment following instruction with operands, space
==========
jr $t0 # This is an in-line comment
---
(program
  (instruction
    (opcode)
    (operands
      (register)))
  (comment))


==========
Inline comment following directive without arguments
==========
.text # comment
---
(program
  (directive
    (meta))
  (comment))

==========
Inline comment following directive with single argument
==========
.align 4 # comment
---
(program
  (directive
    (meta)
    (attributes
      (decimal)))
  (comment))

==========
Inline comment following directive with multiple arguments
==========
.word 1, 2, 3, 4 # comment
---
(program
  (directive
    (meta)
    (attributes
      (decimal)
      (decimal)
      (decimal)
      (decimal)))
  (comment))
